--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Byte-compiled / optimized / DLL files
+git remote add origin git@github.com:RinatShelkov/Kursach_BETA.git# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
