--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ numpy = "^1.26.2"
 openpyxl = "^3.1.2"
 pandas = "^2.1.3"
 requests = "^2.31.0"
+xlrd = "^2.0.1"
+python-dotenv = "^1.0.0"
+pandas-stubs = "^2.1.1.230928"
+types-requests = "^2.31.0.10"
 
 
 [tool.poetry.group.lint.dependencies]
