Function adjustments. Add docstrings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,14 @@ mypy = "^1.7.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+
+[tool.black]
+line-length = 119
+
+[tool.isort]
+line_length = 119
+
+[tool.flake8]
+max-line-length = 99
