Add func in services.py add test in test_services.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ xlrd = "^2.0.1"
 python-dotenv = "^1.0.0"
 pandas-stubs = "^2.1.1.230928"
 types-requests = "^2.31.0.10"
+stubs = "^1.0.0"
 
 
 [tool.poetry.group.lint.dependencies]
